# gitpow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.windows  README.md  dev.bat  docker-compose.yml  package-lock.json  package.json  test-docker-build.bat  test-linux-build.sh  test-macos-build.sh  test-winlinux_builds.bat
.github/workflows/: release.yml
graph-wasm/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: conflicts.rs  diff.rs  explorer.rs  git_ops.rs  rebase.rs  staging.rs
src/git/: repository.rs
src/handlers/: explorer.rs
static/: graph.js  index.html  libraries.js  script.js  styles.css
static/js/: commit-navigation.js  context-menu.js  detached-head.js  dom-elements.js  file-navigation.js  filters.js  helpers.js  keyboard.js  searchable-dropdown.js  staging.js  state.js  ui.js  view-mode.js
