[workspace]
members = ["src-tauri"]
exclude = ["graph-wasm"]
resolver = "2"

[package]
name = "gitpow-rust"
version = "0.1.1"
edition = "2021"

[lib]
name = "gitpow_rust"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header", "timeout"] }
tower = "0.4"
anyhow = "1"
regex = "1"
once_cell = "1"
moka = { version = "0.12", features = ["sync"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20.2"
rayon = "1.10"
rfd = "0.14"
