[package]
name = "graph-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
byteorder = "1"
js-sys = "0.3"
console_error_panic_hook = "0.1"
