[package]
name = "gitpow-tauri"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20.2"
rfd = "0.14"
rayon = "1.8"

# Shared code from parent workspace
gitpow-rust = { path = "../", package = "gitpow-rust" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

