[package]
name = "gitpow-tauri"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20.2"
rfd = "0.14"
rayon = "1.8"

# Shared code from parent workspace
gitpow-rust = { path = "../", package = "gitpow-rust" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Optimize for smaller binary size (recommended by Tauri)
# See: https://v2.tauri.app/concept/size/#cargo-configuration
[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Optimize for speed. Use `s` if you prefer smaller binary size.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

